@@ -347,6 +347,21 @@ public:
     wxBitmap(const wxImage& img, int depth = wxBITMAP_SCREEN_DEPTH);
 
     /**
+        Creates bitmap corresponding to the given cursor.
+
+        This can be useful to display a cursor as it cannot be drawn directly
+        on a window.
+
+        This constructor only exists in wxMSW and wxGTK (where it is
+        implemented for GTK+ 2.8 or later) only.
+
+        @param cursor A valid wxCursor.
+
+        @since 3.1.0
+    */
+    explicit wxBitmap(const wxCursor& cursor);
+
+    /**
         Destructor.
         See @ref overview_refcount_destruct for more info.
 
