@@ -76,6 +76,7 @@ All (GUI):
 - Add wxGenericListCtrl::EndEditLabel() (Tim Kosse).
 - Use native renderer for drawing check boxes in wxPropertyGrid (Eran Ifrah).
 - Fix drawing custom colours of wxEnumProperty items in wxPG (Artur Wieczorek).
+- Add wxBitmap ctor from wxCursor.
 
 wxGTK:
 
